minikube/bill/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bill-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.minikube.zean.pro
      http:
        paths:
          - path: /bill/(.*)
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
